...
            android:layout_height="50dp"
            app:loadImage="@{forecast.weather.get(0).icon}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/weather"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{forecast.weather.get(0).capitalizedDescription}"
            style="@style/FiveDayWeather"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/icon"
...
